--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "luxon": "^2.1.1",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1"
   },
